[package]
name = "maec-rs"
version = "0.1.0"
edition = "2021"
authors = ["Threatwise"]
description = "MAEC (Malware Attribute Enumeration and Characterization) data model library for Rust"
homepage = "https://github.com/Threatwise/maec-rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Threatwise/maec-rs"
documentation = "https://docs.rs/maec-rs"
keywords = ["maec", "malware", "threat-intelligence", "cybersecurity", "analysis"]
categories = ["data-structures", "encoding", "parser-implementations"]
readme = "README.md"

[lib]
name = "maec"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.29", features = ["serialize"] }
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
stix-integration = []
